
3.40  2012-09-11
  - Improved tests.
  - Fixed Perl 5.10.1 compatibility.
  - Fixed FindBin support in Mojolicious applications.

3.39  2012-09-10
  - Improved Mojo::URL and Mojo::Parameters performance.
  - Improved documentation.
  - Improved tests.
  - Fixed support for query parameters in Mojolicious::Plugin::Charset.

3.38  2012-09-07
  - Added xor_encode method to Mojo::ByteStream.
  - Added xor_encode function to Mojo::Util.
  - Improved documentation.
  - Fixed small xor_encode bug. (dod, crab)

3.37  2012-09-04
  - Added finish method to Mojo::Message.
  - Updated jQuery to version 1.8.1.
  - Improved documentation.
  - Improved tests.
  - Fixed Mojo::Transaction to propagate connection close to Mojo::Message.
  - Fixed small state bug in Mojo::Transaction.

3.36  2012-08-30
  - Improved documentation.
  - Improved tests.
  - Fixed small multipart bug.

3.35  2012-08-28
  - Deprecated Mojolicious::Controller->render_content in favor of content
    helper.
  - Improved Mojolicious::Plugin::Config to accept mode specific config files
    without a normal config file. (alexbyk, sri)
  - Improved documentation.
  - Improved tests.

3.34  2012-08-24
  - Improved documentation.

3.33  2012-08-23
  - Improved Mojo::DOM::HTML to handle bad charsets more gracefully.
  - Improved documentation.
  - Improved tests.

3.32  2012-08-20
  - Added event sequentialization support to delay method in Mojo::IOLoop.
    (judofyr, marcus, sri)
  - Added support for expiration session value to Mojolicious::Sessions.
  - Added steps method to Mojo::IOLoop::Delay. (judofyr, marcus, sri)
  - Added tap method to Mojo::Base.
  - Added squish method to Mojo::ByteStream.
  - Added squish function to Mojo::Util.
  - Improved documentation.
  - Improved tests.
  - Fixed json_has method in Test::Mojo.
  - Fixed bug in Mojo::Log that prevented some message events from being
    emitted.
  - Fixed get command to allow ":" character in header values.
  - Fixed small class_to_file bug.