@@ -3,6 +3,7 @@
   - Improved tests.
   - Fixed Perl 5.10.1 compatibility.
   - Fixed FindBin support in Mojolicious applications.
+  - Fixed a few multipart bugs.
 
 3.39  2012-09-10
   - Improved Mojo::URL and Mojo::Parameters performance.
